# tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CASHFLOW_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  COMMIT_MESSAGE.txt  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FORECASTING_IMPLEMENTATION_PLAN.md  FORECASTING_STATUS.md  IMPLEMENTATION_FINAL.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md.bak  NATURAL_COMMANDS_STATUS.md  PHILOSOPHY_ENGINE.md  PHILOSOPHY_QUICK_REF.md  PROFILE_DOCS_INDEX.md  PROFILE_QUICK_REF.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  REMAINING_TASKS.md  TUI_IMPLEMENTATION.md  TUI_NARROW_TERMINAL_GUIDE.md  TUI_RESPONSIVE_DESIGN.md  USER_PROFILE_SYSTEM.md  VALIDATION_REPORT.md  alembic.ini  docker-compose.yml  forecast.json  pyproject.toml  tracker_export_20251022_155027.json
.archive/: CHAT_FEATURE.md  CHAT_INTEGRATION_OCT24.md  CHAT_MARKDOWN_FIX.md  CHAT_TUI_INTEGRATION.md  CHAT_UX_IMPROVEMENTS_OCT24.md  HOTFIX_OCT24_CHAT_PROFILE.md  OCTOBER_24_2025_IMPROVEMENTS.md  PHILOSOPHY_IMPLEMENTATION_SUMMARY.md  PROFILE_EDITING_IMPROVEMENTS_OCT24.md  PROFILE_IMPLEMENTATION_COMPLETE.md  PROFILE_SYSTEM_SUMMARY.md  PROFILE_UPDATE_FEATURE.md  SESSION_SUMMARY.md  TEST_RESULTS.md
.github/: SECURITY.md
.github/workflows/: README.md  ci-cd.yml
.specify/memory/: constitution.md
docs/: AI_FEEDBACK_FORMATTING.md  AI_MEMORY_SYSTEM_ANALYSIS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CASHFLOW_GUIDE.md  CHANGES_ONBOARDING.md  DEPLOYMENT.md  DOCKER.md  TUI_MENU_FIXES.md  TUI_MODE.md  USAGE_MODES.md  USER_GUIDE.md  UV_MIGRATION.md  mcp.md
flutter/tracker/: pubspec.yaml
flutter/tracker/lib/: main.dart
scripts/: init_db.py  migrate_add_user_profiles.py
specs/001-daily-logging-ai/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-daily-logging-ai/checklists/: requirements.md
specs/001-daily-logging-ai/contracts/: api-spec.md  mcp-spec.md
src/tracker/: __init__.py  __version__.py  config.py
src/tracker/api/: dependencies.py  main.py  middleware.py  responses.py
src/tracker/cli/: main.py  profile.py
tests/: conftest.py
tests/integration/: test_ai_integration.py  test_api.py  test_api_comprehensive.py  test_api_smoke.py  test_api_v2.py
tests/unit/: test_ai_client.py  test_entry_service.py  test_feedback_service.py  test_history_service.py
(+94 files in other folders)
